data/derived/comb/progs/unify/prog4492.ml.out
Characters 141-145:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type 'a list * 'b list
       but an expression was expected of type ('c list * 'd list) list
